pythonスクリプト実行可能状態に

--- a/on4d_GLr2/editor.rc
+++ b/on4d_GLr2/editor.rc
@@ -13,12 +13,13 @@ CAPTION "Pythonスクリプト実行"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 LTEXT           "コード", IDC_STATIC, 23, 12, 48, 8
-EDITTEXT        EDITDLG_PATH_TXT, 17, 25, 200, 95, ES_MULTILINE | ES_WANTRETURN | ES_AUTOVSCROLL | WS_VSCROLL
+EDITTEXT        EDITDLG_CODE_TXT, 17, 25, 230, 95, ES_MULTILINE | ES_WANTRETURN | ES_AUTOVSCROLL | WS_VSCROLL
 
-LTEXT           "ファイル読込", IDC_STATIC, 23, 128, 43, 8
+LTEXT           "ファイル読込", IDC_STATIC, 23, 138, 43, 8
+EDITTEXT        EDITDLG_PATH_TXT, 23, 138, 141, 14, ES_AUTOHSCROLL
 
 DEFPUSHBUTTON   "実行", IDOK, 137, 175, 50, 14
-PUSHBUTTON      "キャンセル", IDCANCEL, 198, 175, 50, 14
+PUSHBUTTON      "閉じる", IDCANCEL, 198, 175, 50, 14
 
 END
 
