H3でも白背景に変更可能に

--- a/on4d_GLr2/on4d_GLr2.vcxproj
+++ b/on4d_GLr2/on4d_GLr2.vcxproj
@@ -40,6 +40,7 @@
     <ResourceCompile Include="UI.rc">
       <FileType>Text</FileType>
     </ResourceCompile>
+    <ResourceCompile Include="UIH3.rc" />
     <ResourceCompile Include="UI_EN.rc">
       <FileType>Text</FileType>
     </ResourceCompile>
