add deletability from pop menu to objects

--- a/on4d_GLr2/on4d_GLr2.vcxproj
+++ b/on4d_GLr2/on4d_GLr2.vcxproj
@@ -107,9 +107,11 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Popup.rc" />
+    <ResourceCompile Include="objSetting.rc" />
     <Text Include="pyInit.py">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </Text>
+    <Text Include="objSetting.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{BA463831-02FC-46CE-B106-7B2FDB7C0B43}</ProjectGuid>
