add scalability and speed-variability with pop menu to objects

--- a/on4d_GLr2/objSetting.rc
+++ b/on4d_GLr2/objSetting.rc
@@ -9,12 +9,23 @@
 
 MODOBJ_DLG DIALOGEX 0, 0, 255, 196
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Pythonスクリプト実行"
+CAPTION "オブジェクト設定"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 
 DEFPUSHBUTTON   "実行", IDOK, 137, 175, 50, 14
 PUSHBUTTON      "閉じる", IDCANCEL, 198, 175, 50, 14
+
+LTEXT           "メッシュ", IDC_STATIC, 26, 82, 43, 8
+COMBOBOX		MODOBJ_MESH_CBOX, 148, 81, 81, 100, CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+
+EDITTEXT        MODOBJ_SCALE_TXT, 188, 111, 41, 14, ES_AUTOHSCROLL
+LTEXT           "スケール", IDC_STATIC, 26, 112, 43, 8
+CONTROL         "", MODOBJ_SCALE_SLIDER, "msctls_trackbar32", TBS_BOTH | TBS_NOTICKS | WS_TABSTOP, 58, 111, 100, 15
+
+EDITTEXT        MODOBJ_VELOC_TXT, 188, 141, 41, 14, ES_AUTOHSCROLL
+LTEXT           "速度", IDC_STATIC, 26, 142, 43, 8
+CONTROL         "", MODOBJ_VELOC_SLIDER, "msctls_trackbar32", TBS_BOTH | TBS_NOTICKS | WS_TABSTOP, 58, 141, 100, 15
 
 END
 
