add H3 base plane

--- a/on4d_GLr2/UIH3.rc
+++ b/on4d_GLr2/UIH3.rc
@@ -76,12 +76,13 @@ MENUITEM "直線6つ(点線)", UI_6_POINT
 MENUITEM "直線6つ(線)", UI_6_LINE
 MENUITEM "極座標(点)", UI_TUDE_POINT
 MENUITEM "極座標(線)", UI_TUDE_LINE
-MENUITEM "120胞体(点)"			 UI_120C_POINT
-MENUITEM "120胞体(線)"			 UI_120C_LINE
-MENUITEM "120胞体(柱)"			 UI_120C_SURFACE
+//MENUITEM "120胞体(点)"			 UI_120C_POINT
+//MENUITEM "120胞体(線)"			 UI_120C_LINE
+//MENUITEM "120胞体(柱)"			 UI_120C_SURFACE
 MENUITEM "トーラス(点)", UI_TORUS_POINT
 MENUITEM "トーラス(線)", UI_TORUS_LINE
 MENUITEM "トーラス(面)", UI_TORUS_SURFACE
+MENUITEM "平面", UI_PLANE_SURFACE
 MENUITEM "地球", UI_MK_EARTH
 MENUITEM SEPARATOR
 MENUITEM "立体フイールド", UI_MK_TC
