--- a/on4d_GLr2/UI_EN.rc
+++ b/on4d_GLr2/UI_EN.rc
@@ -5,35 +5,37 @@
 
 KITTY_EN MENU 
 BEGIN
-    POPUP "program"
+    POPUP "Program"
     BEGIN
-		POPUP "frame rate"			//UI_FPS
+		POPUP "Framerate"			//UI_FPS
 		BEGIN
 			MENUITEM "30 (CFR)"			UI_FPS_30
 			MENUITEM "60 (CFR)"			UI_FPS_60
 		END
-		POPUP "Language"					//UI_LANG
-		BEGIN
-			MENUITEM "日本語"			UI_LANG_JA
-			MENUITEM "English"			UI_LANG_EN
-		END
+        POPUP "Select Simlator (Lang)"		//UI_LANG
+        BEGIN
+            MENUITEM "超球面 (日本語)"		UI_LANG_JA
+            MENUITEM "双曲面 (日本語)"	    UI_H3_JA
+            MENUITEM "Spherical (English)"	UI_LANG_EN
+            MENUITEM "Hyperbolic (English)"	UI_H3_EN
+        END
 		MENUITEM SEPARATOR 
-        MENUITEM "exit",                UI_END
+        MENUITEM "Exit",                UI_END
     END
     
-    POPUP "options"
+    POPUP "Options"
     BEGIN
-        POPUP "background"
+        POPUP "Background"
         BEGIN
-            MENUITEM "white",                 UI_BG_WH
-            MENUITEM "dark",                 UI_BG_BK
+            MENUITEM "White",                 UI_BG_WH
+            MENUITEM "Dark",                 UI_BG_BK
         END
-        POPUP "coordinate"
+        POPUP "Coordinate"
         BEGIN
-            MENUITEM "polar",               UI_LOC_TUDE
-            MENUITEM "rectangular",          UI_LOC_EUC
+            MENUITEM "Polar",               UI_LOC_TUDE
+            MENUITEM "Rectangular",          UI_LOC_EUC
         END
-        POPUP "radius"
+        POPUP "World Scale"
         BEGIN
             MENUITEM "20",                UI_RDS_SS
             MENUITEM "30",                UI_RDS_S
@@ -42,16 +44,16 @@ BEGIN
         END
         POPUP "Field of vision"
         BEGIN
-            MENUITEM "confined",                UI_CR_S
-            MENUITEM "middle",                UI_CR_M
-            MENUITEM "wide",                UI_CR_L
+            MENUITEM "Confined",                UI_CR_S
+            MENUITEM "Middle",                UI_CR_M
+            MENUITEM "Wide",                UI_CR_L
         END
-        POPUP "depth effect"
+        POPUP "Depth effect"
         BEGIN
-            MENUITEM "none",					UI_SD_0
-            MENUITEM "linear decay",   UI_SD_1
-            MENUITEM "shadow 1(light = POV)",       UI_SD_2
-            MENUITEM "shadow 2(light = POV)",       UI_SD_4
+            MENUITEM "None",					UI_SD_0
+            MENUITEM "Linear decay",   UI_SD_1
+            MENUITEM "Shadow 1(light = POV)",       UI_SD_2
+            MENUITEM "Shadow 2(light = POV)",       UI_SD_4
         END
         //POPUP "レンダリング"
         //BEGIN
@@ -61,63 +63,63 @@ BEGIN
         //END
         //MENUITEM "射撃objの自転", UI_SHOOT_ROT
     END
-	POPUP "object"
+	POPUP "Object"
 	BEGIN
-		MENUITEM "move object"			UI_CALL_MODLG
-		POPUP "change object"
+		MENUITEM "Move object"			UI_CALL_MODLG
+		POPUP "Change object"
 		BEGIN
-			POPUP "base object"
+			POPUP "Base object"
 			BEGIN
-				MENUITEM "none",          UI_WL_NONE
+				MENUITEM "None",          UI_WL_NONE
 				MENUITEM "6 lines (points)",          UI_6_POINT
 				MENUITEM " 6 lines (lines)",          UI_6_LINE
-				MENUITEM "polar (points)",           UI_TUDE_POINT
-				MENUITEM "polar (lines)",           UI_TUDE_LINE
+				MENUITEM "Polar (points)",           UI_TUDE_POINT
+				MENUITEM "Polar (lines)",           UI_TUDE_LINE
 				MENUITEM "120-cell (points)"			 UI_120C_POINT
 				MENUITEM "120-cell (lines)"			 UI_120C_LINE
 				MENUITEM "120-cell (polygons)"			 UI_120C_SURFACE
-				MENUITEM "torus(points)",           UI_TORUS_POINT
-				MENUITEM "torus(lines)",           UI_TORUS_LINE
-				MENUITEM "torus(polygons)",           UI_TORUS_SURFACE
-				MENUITEM "earth",				  UI_MK_EARTH
+				MENUITEM "Torus(points)",           UI_TORUS_POINT
+				MENUITEM "Torus(lines)",           UI_TORUS_LINE
+				MENUITEM "Torus(polygons)",           UI_TORUS_SURFACE
+				MENUITEM "Earth",				  UI_MK_EARTH
 				MENUITEM SEPARATOR 
-				MENUITEM "irregular field",				  UI_MK_TC
+				MENUITEM "Irregular field",				  UI_MK_TC
 			END
-			POPUP "shooted object"
+			POPUP "Shooted object"
 			BEGIN
-				MENUITEM "box",               UI_THROW_CUBE
-				MENUITEM "earth",                UI_THROW_SPHERE
-				MENUITEM "horse?",              UI_THROW_HORSE
-				MENUITEM "rock",              UI_THROW_ROCK
-				MENUITEM "reference(.obj)",          UI_THROW_REF
+				MENUITEM "Box",               UI_THROW_CUBE
+				MENUITEM "Earth",                UI_THROW_SPHERE
+				MENUITEM "Horse?",              UI_THROW_HORSE
+				MENUITEM "Rock",              UI_THROW_ROCK
+				MENUITEM "Reference(.obj)",          UI_THROW_REF
 			END
 		END
-        POPUP "replace shoot-obj"
+        POPUP "Replace shooted-obj"
 		BEGIN
-			MENUITEM "random (cluster)",             UI_THROW_RANDOM
-			MENUITEM "random (Uniform)",             UI_THROW_RANDOM2
-			MENUITEM "clear",             UI_THROW_CLEAR
+			MENUITEM "Random (cluster)",             UI_THROW_RANDOM
+			MENUITEM "Random (Uniform)",             UI_THROW_RANDOM2
+			MENUITEM "Clear",             UI_THROW_CLEAR
 		END
-        POPUP "motion"
+        POPUP "Motion"
         BEGIN
-            MENUITEM "constant",                 UI_MV_CONST
-            MENUITEM "attraction",                 UI_MV_ATTRACT
-            MENUITEM "repulsion",                 UI_MV_REPULSE
+            MENUITEM "Constant",                 UI_MV_CONST
+            MENUITEM "Attraction",                 UI_MV_ATTRACT
+            MENUITEM "Repulsion",                 UI_MV_REPULSE
         END
 	END
-    POPUP "view"
+    POPUP "View"
     BEGIN
-        MENUITEM "coordinate",                UI_XYZ
-        MENUITEM "player object",     UI_PLR
-        MENUITEM "map",               UI_MAP
-        MENUITEM "loc/rot",                UI_LR_RESULT
-        MENUITEM "distance",                UI_DST
-        MENUITEM "track",                UI_PAST
+        MENUITEM "Coordinate",                UI_XYZ
+        MENUITEM "Player object",     UI_PLR
+        MENUITEM "Map",               UI_MAP
+        MENUITEM "Loc/Rot",                UI_LR_RESULT
+        MENUITEM "Distance",                UI_DST
+        MENUITEM "Track",                UI_PAST
     END
-    POPUP "help"
+    POPUP "Help"
     BEGIN
-        MENUITEM "how to operate",              UI_HOWTO_DLG
+        MENUITEM "How to operate",              UI_HOWTO_DLG
         //MENUITEM "超球面の性質",            40041
-        MENUITEM "about",            UI_INFO_DLG
+        MENUITEM "About",            UI_INFO_DLG
     END
 END
