fix refered mesh loading bug

--- a/on4d_GLr2/info.rc
+++ b/on4d_GLr2/info.rc
@@ -7,9 +7,10 @@ CAPTION "バージョン情報"
 FONT 9, "MS Shell Dlg", 400, 0, 0x1
 
 BEGIN
-	LTEXT "超球面遊泳シミュレーター 2.5.2\n\nリリース: 2020.04\n作成者: bruefire\
+	LTEXT "超球面遊泳シミュレーター 3.0.0\
+			\n双曲面遊泳シミュレーター 3.0.0\n\nリリース: 2021.01\n作成者: bruefire\
 			\nライセンス: オープンソースソフトウェア",
-			-1, 8, 15, 105, 45
+			-1, 8, 15, 105, 55
 	ICON "IDI_ICON1", IDC_STATIC, 122, 18, 18, 21
 END
 
