--- a/on4d_GLr2/editor.rc
+++ b/on4d_GLr2/editor.rc
@@ -16,8 +16,9 @@ LTEXT           "コード", IDC_STATIC, 23, 12, 48, 8
 EDITTEXT        EDITDLG_CODE_TXT, 17, 25, 230, 95, ES_MULTILINE | ES_WANTRETURN | ES_AUTOVSCROLL | WS_VSCROLL
 
 LTEXT           "ファイル読込", IDC_STATIC, 23, 138, 43, 8
-EDITTEXT        EDITDLG_PATH_TXT, 23, 138, 141, 14, ES_AUTOHSCROLL
+EDITTEXT        EDITDLG_PATH_TXT, 23, 138, 161, 14, ES_AUTOHSCROLL
 
+DEFPUSHBUTTON   "参照", EDITDLG_REF_SCRIPT, 185, 138, 50, 14
 DEFPUSHBUTTON   "実行", IDOK, 137, 175, 50, 14
 PUSHBUTTON      "閉じる", IDCANCEL, 198, 175, 50, 14
 
