--- a/on4d_GLr2/on4d_GLr2.vcxproj.filters
+++ b/on4d_GLr2/on4d_GLr2.vcxproj.filters
@@ -1,282 +1,282 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="リソース ファイル">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="c++ソース">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="c++ ヘッダ">
+    <Filter Include="c++ header">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
-    <Filter Include="c++ソース\フォーム系">
-      <UniqueIdentifier>{0986643d-8083-4b2f-8525-7e3d2d3c9fd6}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="c++ソース\GL部">
-      <UniqueIdentifier>{361fa09f-0f34-4bf5-99f2-122377e16975}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="c++ソース\OS依存%28Windows%29">
-      <UniqueIdentifier>{d04323b2-d4f1-40c2-901c-a5d9aadd8181}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="c++ ヘッダ\GL部">
+    <Filter Include="c++ header\GL部">
       <UniqueIdentifier>{f8951aba-1404-482d-8908-0d6e278fe4d7}</UniqueIdentifier>
     </Filter>
-    <Filter Include="c++ ヘッダ\OS依存部%28Windows%29">
+    <Filter Include="c++ header\OS依存部%28Windows%29">
       <UniqueIdentifier>{99f3ddce-7745-4081-aca5-60d09562a2f1}</UniqueIdentifier>
     </Filter>
-    <Filter Include="c++ ヘッダ\OS依存部%28Windows%29\フォーム系">
+    <Filter Include="c++ header\OS依存部%28Windows%29\フォーム系">
       <UniqueIdentifier>{1d777d3a-076e-4f26-bb8c-ddf3724e49f1}</UniqueIdentifier>
     </Filter>
-    <Filter Include="c++ ヘッダ\コア演算部">
-      <UniqueIdentifier>{21f6d860-9a16-402d-b976-8d6442d2c214}</UniqueIdentifier>
+    <Filter Include="c++ source">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="c++ソース\コア演算部">
-      <UniqueIdentifier>{1b9fabec-2501-4487-a358-3dd357866c4c}</UniqueIdentifier>
+    <Filter Include="c++ source\フォーム系">
+      <UniqueIdentifier>{0986643d-8083-4b2f-8525-7e3d2d3c9fd6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="リソース ファイル\OS依存部%28Windows%29">
+    <Filter Include="c++ source\GL部">
+      <UniqueIdentifier>{361fa09f-0f34-4bf5-99f2-122377e16975}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="c++ source\OS依存%28Windows%29">
+      <UniqueIdentifier>{d04323b2-d4f1-40c2-901c-a5d9aadd8181}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="resource files">
+      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
+      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    </Filter>
+    <Filter Include="resource files\OS依存部%28Windows%29">
       <UniqueIdentifier>{71f81c15-b77a-4900-b0fa-fc5d7498cdad}</UniqueIdentifier>
     </Filter>
-    <Filter Include="リソース ファイル\GL部">
+    <Filter Include="resource files\GL部">
       <UniqueIdentifier>{6960d171-9130-4be0-bd21-412cad736c09}</UniqueIdentifier>
     </Filter>
-    <Filter Include="リソース ファイル\GL部\GLSLシェーダ">
+    <Filter Include="resource files\GL部\GLSLシェーダ">
       <UniqueIdentifier>{e3032fc6-14e7-49ec-8906-ffc43e5e4bc5}</UniqueIdentifier>
     </Filter>
-    <Filter Include="リソース ファイル\GL部\GLSLシェーダ\line4">
+    <Filter Include="resource files\GL部\GLSLシェーダ\line4">
       <UniqueIdentifier>{015eab34-8abe-4b9e-990a-240a095ce4ae}</UniqueIdentifier>
     </Filter>
-    <Filter Include="リソース ファイル\GL部\GLSLシェーダ\pxl">
+    <Filter Include="resource files\GL部\GLSLシェーダ\pxl">
       <UniqueIdentifier>{9ce4d1b5-a4a0-492a-8235-6e4181d91907}</UniqueIdentifier>
     </Filter>
-    <Filter Include="リソース ファイル\GL部\GLSLシェーダ\S3">
+    <Filter Include="resource files\GL部\GLSLシェーダ\S3">
       <UniqueIdentifier>{dd7b011f-cd1b-4a77-a494-304102ae007b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="リソース ファイル\GL部\GLSLシェーダ\S3_low">
+    <Filter Include="resource files\GL部\GLSLシェーダ\S3_low">
       <UniqueIdentifier>{c171438f-5eb5-4818-a5cf-534fe45e4ee0}</UniqueIdentifier>
     </Filter>
-    <Filter Include="リソース ファイル\GL部\GLSLシェーダ\H3">
+    <Filter Include="resource files\GL部\GLSLシェーダ\H3">
       <UniqueIdentifier>{84409077-b1a5-4128-8872-27f0e98d1d55}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="c++ header\core演算部">
+      <UniqueIdentifier>{21f6d860-9a16-402d-b976-8d6442d2c214}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="c++ source\core演算部">
+      <UniqueIdentifier>{1b9fabec-2501-4487-a358-3dd357866c4c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="geo.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\S3</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\S3</Filter>
     </None>
     <None Include="pixel.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\S3</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\S3</Filter>
     </None>
     <None Include="vartex.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\S3</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\S3</Filter>
     </None>
     <None Include="lineF.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\line4</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\line4</Filter>
     </None>
     <None Include="lineG.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\line4</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\line4</Filter>
     </None>
     <None Include="pxl.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\pxl</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\pxl</Filter>
     </None>
     <None Include="vtx3D.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\pxl</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\pxl</Filter>
     </None>
     <None Include="pxl3D.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\pxl</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\pxl</Filter>
     </None>
     <None Include="vtx0.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\pxl</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\pxl</Filter>
     </None>
     <None Include="lineG2.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\line4</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\line4</Filter>
     </None>
     <None Include="lineF2.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\line4</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\line4</Filter>
     </None>
     <None Include="メモ.txt">
-      <Filter>リソース ファイル</Filter>
+      <Filter>resource files</Filter>
     </None>
     <None Include="ClassDiagram1.cd" />
     <None Include="pixel_low.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\S3_low</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\S3_low</Filter>
     </None>
     <None Include="vartex_low.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\S3_low</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\S3_low</Filter>
     </None>
     <None Include="h3pxl.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\H3</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\H3</Filter>
     </None>
     <None Include="h3vtx.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\H3</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\H3</Filter>
     </None>
     <None Include="h3vtxPt.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\H3</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\H3</Filter>
     </None>
     <None Include="h3pxlPt.c">
-      <Filter>リソース ファイル\GL部\GLSLシェーダ\H3</Filter>
+      <Filter>resource files\GL部\GLSLシェーダ\H3</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rcFunc.cpp">
-      <Filter>c++ソース\フォーム系</Filter>
+      <Filter>c++ source\フォーム系</Filter>
     </ClCompile>
     <ClCompile Include="engine3d.cpp">
-      <Filter>c++ソース\コア演算部</Filter>
+      <Filter>c++ source\core演算部</Filter>
     </ClCompile>
     <ClCompile Include="functions.cpp">
-      <Filter>c++ソース\コア演算部</Filter>
+      <Filter>c++ source\core演算部</Filter>
     </ClCompile>
     <ClCompile Include="objs.cpp">
-      <Filter>c++ソース\コア演算部</Filter>
+      <Filter>c++ source\core演算部</Filter>
     </ClCompile>
     <ClCompile Include="engine3dGL.cpp">
-      <Filter>c++ソース\GL部</Filter>
+      <Filter>c++ source\GL部</Filter>
     </ClCompile>
     <ClCompile Include="GL_Func.cpp">
-      <Filter>c++ソース\GL部</Filter>
+      <Filter>c++ source\GL部</Filter>
     </ClCompile>
     <ClCompile Include="draw3GL4.cpp">
-      <Filter>c++ソース\GL部</Filter>
+      <Filter>c++ source\GL部</Filter>
     </ClCompile>
     <ClCompile Include="shader.cpp">
-      <Filter>c++ソース\GL部</Filter>
+      <Filter>c++ source\GL部</Filter>
     </ClCompile>
     <ClCompile Include="core.cpp">
-      <Filter>c++ソース\OS依存%28Windows%29</Filter>
+      <Filter>c++ source\OS依存%28Windows%29</Filter>
     </ClCompile>
     <ClCompile Include="engine3dWin.cpp">
-      <Filter>c++ソース\OS依存%28Windows%29</Filter>
+      <Filter>c++ source\OS依存%28Windows%29</Filter>
     </ClCompile>
     <ClCompile Include="to3d.cpp">
-      <Filter>c++ソース\OS依存%28Windows%29</Filter>
+      <Filter>c++ source\OS依存%28Windows%29</Filter>
     </ClCompile>
     <ClCompile Include="operation.cpp">
-      <Filter>c++ソース\コア演算部</Filter>
+      <Filter>c++ source\core演算部</Filter>
     </ClCompile>
     <ClCompile Include="player.cpp">
-      <Filter>c++ソース\コア演算部</Filter>
+      <Filter>c++ source\core演算部</Filter>
     </ClCompile>
     <ClCompile Include="CppPythonIF.cpp">
-      <Filter>c++ソース\コア演算部</Filter>
+      <Filter>c++ source\core演算部</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="modlgRc.h">
-      <Filter>c++ ヘッダ\OS依存部%28Windows%29\フォーム系</Filter>
+      <Filter>c++ header\OS依存部%28Windows%29\フォーム系</Filter>
     </ClInclude>
     <ClInclude Include="rcFunc.h">
-      <Filter>c++ ヘッダ\OS依存部%28Windows%29\フォーム系</Filter>
+      <Filter>c++ header\OS依存部%28Windows%29\フォーム系</Filter>
     </ClInclude>
     <ClInclude Include="rcFunc2.h">
-      <Filter>c++ ヘッダ\OS依存部%28Windows%29\フォーム系</Filter>
+      <Filter>c++ header\OS依存部%28Windows%29\フォーム系</Filter>
     </ClInclude>
     <ClInclude Include="resource1.h">
-      <Filter>c++ ヘッダ\OS依存部%28Windows%29\フォーム系</Filter>
+      <Filter>c++ header\OS依存部%28Windows%29\フォーム系</Filter>
     </ClInclude>
     <ClInclude Include="constants.h">
-      <Filter>c++ ヘッダ\コア演算部</Filter>
+      <Filter>c++ header\core演算部</Filter>
     </ClInclude>
     <ClInclude Include="engine3d.h">
-      <Filter>c++ ヘッダ\コア演算部</Filter>
+      <Filter>c++ header\core演算部</Filter>
     </ClInclude>
     <ClInclude Include="functions.h">
-      <Filter>c++ ヘッダ\コア演算部</Filter>
+      <Filter>c++ header\core演算部</Filter>
     </ClInclude>
     <ClInclude Include="global_var.h">
-      <Filter>c++ ヘッダ\コア演算部</Filter>
+      <Filter>c++ header\core演算部</Filter>
     </ClInclude>
     <ClInclude Include="global_var2.h">
-      <Filter>c++ ヘッダ\コア演算部</Filter>
+      <Filter>c++ header\core演算部</Filter>
     </ClInclude>
     <ClInclude Include="S3ErrorManager.h">
-      <Filter>c++ ヘッダ\コア演算部</Filter>
+      <Filter>c++ header\core演算部</Filter>
     </ClInclude>
     <ClInclude Include="engine3dGL.h">
-      <Filter>c++ ヘッダ\GL部</Filter>
+      <Filter>c++ header\GL部</Filter>
     </ClInclude>
     <ClInclude Include="engine3dWin.h">
-      <Filter>c++ ヘッダ\OS依存部%28Windows%29</Filter>
+      <Filter>c++ header\OS依存部%28Windows%29</Filter>
     </ClInclude>
     <ClInclude Include="stb_image.h">
-      <Filter>c++ ヘッダ\GL部</Filter>
+      <Filter>c++ header\GL部</Filter>
     </ClInclude>
     <ClInclude Include="UI_DEF.h">
-      <Filter>c++ ヘッダ\GL部</Filter>
+      <Filter>c++ header\GL部</Filter>
     </ClInclude>
     <ClInclude Include="geometry.h">
-      <Filter>c++ ヘッダ\コア演算部</Filter>
+      <Filter>c++ header\core演算部</Filter>
     </ClInclude>
     <ClInclude Include="guiItem.h">
-      <Filter>c++ ヘッダ\GL部</Filter>
+      <Filter>c++ header\GL部</Filter>
     </ClInclude>
     <ClInclude Include="object.h">
-      <Filter>c++ ヘッダ\コア演算部</Filter>
+      <Filter>c++ header\core演算部</Filter>
     </ClInclude>
     <ClInclude Include="operation.h">
-      <Filter>c++ ヘッダ\コア演算部</Filter>
+      <Filter>c++ header\core演算部</Filter>
     </ClInclude>
     <ClInclude Include="player.h">
-      <Filter>c++ ヘッダ\コア演算部</Filter>
+      <Filter>c++ header\core演算部</Filter>
     </ClInclude>
     <ClInclude Include="point.h">
-      <Filter>c++ ヘッダ\コア演算部</Filter>
+      <Filter>c++ header\core演算部</Filter>
     </ClInclude>
     <ClInclude Include="CppPythonIF.h">
-      <Filter>c++ ヘッダ\コア演算部</Filter>
+      <Filter>c++ header\core演算部</Filter>
     </ClInclude>
     <ClInclude Include="editor.h">
-      <Filter>c++ ヘッダ\OS依存部%28Windows%29\フォーム系</Filter>
+      <Filter>c++ header\OS依存部%28Windows%29\フォーム系</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="UI_EN.rc">
-      <Filter>リソース ファイル\OS依存部%28Windows%29</Filter>
+      <Filter>resource files\OS依存部%28Windows%29</Filter>
     </ResourceCompile>
     <ResourceCompile Include="chgPlayerLoc.rc">
-      <Filter>リソース ファイル\OS依存部%28Windows%29</Filter>
+      <Filter>resource files\OS依存部%28Windows%29</Filter>
     </ResourceCompile>
     <ResourceCompile Include="howTo.rc">
-      <Filter>リソース ファイル\OS依存部%28Windows%29</Filter>
+      <Filter>resource files\OS依存部%28Windows%29</Filter>
     </ResourceCompile>
     <ResourceCompile Include="info.rc">
-      <Filter>リソース ファイル\OS依存部%28Windows%29</Filter>
+      <Filter>resource files\OS依存部%28Windows%29</Filter>
     </ResourceCompile>
     <ResourceCompile Include="UI.rc">
-      <Filter>リソース ファイル\OS依存部%28Windows%29</Filter>
+      <Filter>resource files\OS依存部%28Windows%29</Filter>
     </ResourceCompile>
     <ResourceCompile Include="editor.rc">
-      <Filter>リソース ファイル\OS依存部%28Windows%29</Filter>
+      <Filter>resource files\OS依存部%28Windows%29</Filter>
     </ResourceCompile>
     <ResourceCompile Include="UIH3.rc">
-      <Filter>リソース ファイル\OS依存部%28Windows%29</Filter>
+      <Filter>resource files\OS依存部%28Windows%29</Filter>
     </ResourceCompile>
     <ResourceCompile Include="Popup.rc">
-      <Filter>リソース ファイル\OS依存部%28Windows%29</Filter>
+      <Filter>resource files\OS依存部%28Windows%29</Filter>
     </ResourceCompile>
     <ResourceCompile Include="objSetting.rc">
-      <Filter>リソース ファイル\OS依存部%28Windows%29</Filter>
+      <Filter>resource files\OS依存部%28Windows%29</Filter>
     </ResourceCompile>
     <ResourceCompile Include="UIH3EN.rc">
-      <Filter>リソース ファイル\OS依存部%28Windows%29</Filter>
+      <Filter>resource files\OS依存部%28Windows%29</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="s3sim.ico">
-      <Filter>リソース ファイル</Filter>
+      <Filter>resource files</Filter>
     </Image>
   </ItemGroup>
   <ItemGroup>
     <Text Include="pyInit.py">
-      <Filter>リソース ファイル</Filter>
+      <Filter>resource files</Filter>
     </Text>
     <Text Include="objSetting.h">
-      <Filter>c++ ヘッダ\OS依存部%28Windows%29\フォーム系</Filter>
+      <Filter>c++ header\OS依存部%28Windows%29\フォーム系</Filter>
     </Text>
     <Text Include="pyUpd.py">
-      <Filter>リソース ファイル</Filter>
+      <Filter>resource files</Filter>
     </Text>
   </ItemGroup>
 </Project>
