delete unneeded files.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.tlog
 *.ipch
 *.db
+*.suo
 .vs
 *.sdf
 Debug/
@@ -11,3 +12,4 @@ x64/
 on4d_GLr2/Debug/
 on4d_GLr2/Release/
 on4d_GLr2/x64/
+on4d_GLr2/*.aps
