--- a/on4d_GLr2/on4d_GLr2.vcxproj.filters
+++ b/on4d_GLr2/on4d_GLr2.vcxproj.filters
@@ -180,6 +180,9 @@
     <ClCompile Include="..\OVR\LibOVRKernel\Src\GL\CAPI_GLE.cpp">
       <Filter>c++ source\OVR</Filter>
     </ClCompile>
+    <ClCompile Include="PyInteract.cpp">
+      <Filter>c++ source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="modlgRc.h">
@@ -259,6 +262,9 @@
     </ClInclude>
     <ClInclude Include="..\OVR\LibOVRKernel\Src\GL\CAPI_GLE_GL.h">
       <Filter>c++ header\OVR</Filter>
+    </ClInclude>
+    <ClInclude Include="PyInteract.h">
+      <Filter>c++ header\core演算部</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
