--- a/on4d_GLr2/on4d_GLr2.vcxproj
+++ b/on4d_GLr2/on4d_GLr2.vcxproj
@@ -56,6 +56,7 @@
     <ClCompile Include="engine3d.cpp" />
     <ClCompile Include="engine3dGL.cpp" />
     <ClCompile Include="engine3dWin.cpp" />
+    <ClCompile Include="engine3dWinOVR.cpp" />
     <ClCompile Include="functions.cpp" />
     <ClCompile Include="GL_Func.cpp" />
     <ClCompile Include="PyInteract.cpp" />
@@ -95,6 +96,7 @@
     <ClInclude Include="engine3dGL.h" />
     <ClInclude Include="engine3dOS.h" />
     <ClInclude Include="engine3dWin.h" />
+    <ClInclude Include="engine3dWinOVR.h" />
     <ClInclude Include="functions.h" />
     <ClInclude Include="geometry.h" />
     <ClInclude Include="global_var.h" />
